certificates/petunia-infra/polonium.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polonium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polonium
  template:
    metadata:
      labels:
        app: polonium
    spec:
      containers:
      - name: polonium
        image: roskenet/polonium:1.0.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: polonium
spec:
  selector:
    app: polonium
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
