certificates/petunia-infra/polonium-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polonium
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.roskenet.de
    secretName: polonium-tls
  rules:
  - host: www.roskenet.de
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: polonium
            port:
              number: 8080
